# fp2023

./: README.md  tasks.md
CSharpExceptions/lib/: ast.ml  base_lib.ml  base_lib.mli  common_types.ml  common_types.mli  dune  env_types.ml  env_types.mli  errors.ml  errors.mli  interpret_converters.ml  interpret_converters.mli  interpreter.ml  interpreter.mli  interpreter_tests.ml  interpreter_tests.mli  monads.ml  monads.mli  pars_tests.ml  pars_tests.mli  parser.ml  parser.mli  type_check.ml  type_check.mli  type_check_tests.ml  type_check_tests.mli
Haskell/lib/: ast.ml  dune  inferencer.ml  inferencer.mli  interpreter.ml  interpreter.mli  parser.ml  parser.mli  tests.ml  typedtree.ml  typedtree.mli
Haskell/lib/tests/: dune  inferencerTests.ml  inferencerTests.mli  interpreterTests.ml  parserTests.ml
Lambda/: REPL.ml  dune
Lambda/demos/: demoAO.ml  demoNO.ml  interpretTests.t
Lambda/lib/: tests.mli
Lua/: Lua.opam  README.md  dune-project
Lua/_build/: .db  .digest-db  log
Lua/_build/.promotion-staging/lib/parser/: stat.ml
Lua/_build/default/: Lua.dune-package  Lua.install  Lua.opam  META.Lua
Lua/_build/default/.dune/: configurator  configurator.v2
Lua/_build/default/.ppx/0bb5094b13567c3c4e1ee33245b80e63/: dune__exe___ppx.cmo
Lua/_build/default/.ppx/a2214fde0f9080164c234835e457c45a/: dune__exe___ppx.cmi  dune__exe___ppx.cmo  dune__exe___ppx.cmx
Lua/_build/default/lib/ast/: ast.cma  ast.cmxa  ast.cmxs  ast.ml  ast.pp.ml
Lua/_build/default/lib/ast/.merlin-conf/: lib-Lua.ast
Lua/_build/default/lib/parser/: common.pp.ml  common.pp.mli  expr.ml  expr.pp.ml  expr.pp.mli  parser.cma  parser.cmxa  parser.cmxs  parser.ml  parser.pp.ml  parser.pp.mli  parser__.ml-gen  stat.mli  stat.pp.ml  stat.pp.mli
Lua/lib/ast/: ast.ml  dune
Lua/lib/interpreter/: dune  hashtbl_p.ml  interpreter.ml  interpreter.mli  var_zipper.ml
Lua/lib/parser/: common.ml  common.mli  dune  expr.ml  expr.mli  parser.ml  parser.mli  stat.ml  stat.mli
(+101 files in other folders)
