(lang dune 3.7)

(generate_opam_files true)

(license LGPL-3.0-or-later)

(authors "Alexandr Lekomtsev <alelekomtsev@gmail.com>")

(maintainers "Alexandr Lekomtsev <alelekomtsev@gmail.com>")

(bug_reports "https://github.com/vacmannnn/fp2023/issues")

(homepage "https://github.com/vacmannnn/fp2023")

(package
 (name Lua)
 (synopsis "Mini-Lua interpeter")
 (description "Subset of lua language")
 (depends ocaml dune base angstrom ppx_deriving ppx_expect bisect_ppx))
