(library
 (name haskellLib)
 (public_name Haskell.lib)
 (modules Parser Ast Inferencer Typedtree Interpreter)
 (libraries base angstrom ppx_show.runtime)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_expect ppx_deriving.show))
  (inline_tests))

(library
 (name tests)
 (modules tests)
 (libraries haskellLib)
 (preprocess
  (pps ppx_expect ppx_deriving.show))
 (instrumentation
  (backend bisect_ppx))
 (inline_tests))
